--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-openai-agents==0.0.5
 openai>=0.27.0
 PyYAML>=6.0
 python-dotenv>=1.0.0
 pytest>=7.0
+fastapi>=0.95.0
+uvicorn>=0.22.0
+pydantic>=1.10.0
+httpx>=0.24.0
